Add icons and formatting to sidebar

--- a/index.html
+++ b/index.html
@@ -9,14 +9,60 @@
 <body>
 
     <div class="sidebar">
-        <div>Dashboard</div>
-        <div>Navigation Area 1</div>
-        <div>Navigation Area 2</div>
+        <div class="title"><img class="iconLarge" src="icons/view-dashboard.svg"><h2>Dashboard</h2></div>
+        <div class="sideNavigation">
+            <ul>
+                <li>
+                    <img class="icon" src="icons/home.svg">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/card-account-details-outline.svg">
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/message-fast.svg">
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/history.svg">
+                    <p>History</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/calendar-check.svg">
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/account-group.svg">
+                    <p>Communities</p>
+                </li>
+            </ul>
+        </div>
+        <div class="sideNavigation">
+            <ul>
+                <li>
+                    <img class="icon" src="icons/cog.svg">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/help-box.svg">
+                    <p>Support</p>
+                </li>
+                <li>
+                    <img class="icon" src="icons/security.svg">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class="header">
         <div class="topNavigation">
-            Search, Notification, Icon, Name
+            <img class="icon" src="icons/magnify.svg">
+            <p>searchbar</p>
+            <img class="icon" src="icons/bell.svg">
+            <p>pro</p>
+            <p>Smabian Development</p>
         </div>
         <div class="controlSection">
             Profile & Buttons
