Add top navigation styling and profile image

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
     <div class="header">
         <div class="topNavigation">
             <img class="icon" src="icons/magnify.svg">
-            <p>searchbar</p>
+            <input type="text" placeholder="">
+            <div></div>
             <img class="icon" src="icons/bell.svg">
-            <p>pro</p>
-            <p>Smabian Development</p>
+            <img class="profile" src="profiles/main.png">
+            <p>Smabian</p>
         </div>
         <div class="controlSection">
             Profile & Buttons
