Finalize top section and add avatar assets

--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
             <p>Smabian</p>
         </div>
         <div class="controlSection">
-            Profile & Buttons
+            <img class="profileLarge" src="profiles/main.png">
+            <div class="Greeting">
+                <p>Hi there,</p>
+                <h2>Smabian (@smabian)</h2>
+            </div>
+            <div></div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </div>
     
