Add card styling and content placeholder

--- a/index.html
+++ b/index.html
@@ -80,13 +80,29 @@
     
     <div class="content">
         <div class="projects">
-            Project Tiles
-        </div>
-        <div class="announcement">
+            <h4>Your Projects</h4>
+            <div class="cardlist">
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
 
-        </div>
-        <div class="trending">
 
+
+            </div>
+        </div>
+        <div class="metaBar">
+            <div class="announcement">
+                <h4>Announcements</h4>
+            </div>
+            <div class="trending">
+                <h4>Trending</h4>
+            </div>
         </div>
     </div>
     
