Add additional cards and fix card grid

--- a/index.html
+++ b/index.html
@@ -91,9 +91,51 @@
                         <img class="icon" src="icons/share-variant.svg">
                     </div>
                 </div>
-
-
-
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <div class="actionIcons">
+                        <img class="icon" src="icons/star-plus-outline.svg">
+                        <img class="icon" src="icons/eye-plus-outline.svg">
+                        <img class="icon" src="icons/share-variant.svg">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="metaBar">
