Add announcements and grid styling to announcement

--- a/index.html
+++ b/index.html
@@ -141,6 +141,22 @@
         <div class="metaBar">
             <div class="announcement">
                 <h4>Announcements</h4>
+                <div class="announcementGrid">
+                    <div class="announcementItem">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <hr>
+                    </div>
+                    <div class="announcementItem">
+                        <h5>Community Share Day</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam provident doloremque!</p>
+                        <hr>
+                    </div>
+                    <div class="announcementItem">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore nemo, earum et, optio blanditiis id reprehenderit animi aliquid, aperiam deserunt atque!</p>
+                    </div>
+                </div>
             </div>
             <div class="trending">
                 <h4>Trending</h4>
