Add trending section and content elements

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h5>Super Cool Project</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <h5>Less Cool Project</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae quam perferendis reiciendis sint eum ratione dolores, quidem iure, tempore numquam deleniti, tempora illum provident necessitatibus placeat inventore iusto eius accusantium.</p>
                     <div class="actionIcons">
                         <img class="icon" src="icons/star-plus-outline.svg">
                         <img class="icon" src="icons/eye-plus-outline.svg">
@@ -101,8 +101,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h5>Super Cool Project</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <h5>Odins Hammer</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae maxime at assumenda, a rerum veniam possimus numquam odio quae ratione, eveniet natus enim nesciunt nostrum eum nisi nulla tempora suscipit?</p>
                     <div class="actionIcons">
                         <img class="icon" src="icons/star-plus-outline.svg">
                         <img class="icon" src="icons/eye-plus-outline.svg">
@@ -110,8 +110,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h5>Super Cool Project</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <h5>Ad Blocker</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta architecto quasi maxime beatae blanditiis voluptates aperiam corporis inventore eveniet voluptate, reiciendis animi in natus voluptatibus autem veniam consequuntur reprehenderit rerum.</p>
                     <div class="actionIcons">
                         <img class="icon" src="icons/star-plus-outline.svg">
                         <img class="icon" src="icons/eye-plus-outline.svg">
@@ -119,8 +119,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h5>Super Cool Project</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <h5>Dashboard App</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse tempora quibusdam iste. Impedit beatae voluptates dolor, vel odio ducimus illo illum perferendis veniam expedita, sequi, nobis fugiat dolorum a aliquid.</p>
                     <div class="actionIcons">
                         <img class="icon" src="icons/star-plus-outline.svg">
                         <img class="icon" src="icons/eye-plus-outline.svg">
@@ -128,8 +128,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h5>Super Cool Project</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugiat magni placeat rem.</p>
+                    <h5>Beginner App</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et perferendis possimus animi ut veritatis autem, accusamus voluptatibus ratione, asperiores dolores. Consequatur, ullam! Nesciunt quisquam sunt animi reprehenderit, accusamus corporis?</p>
                     <div class="actionIcons">
                         <img class="icon" src="icons/star-plus-outline.svg">
                         <img class="icon" src="icons/eye-plus-outline.svg">
@@ -160,6 +160,28 @@
             </div>
             <div class="trending">
                 <h4>Trending</h4>
+                <div class="trendingGrid">
+                    <div class="trendingItem">
+                        <img class="profile" src="profiles/Avatar1.png">
+                        <p>@tegan</p>
+                        <p class="greyText">World Peace Builder</p>
+                    </div>
+                    <div class="trendingItem">
+                        <img class="profile" src="profiles/Avatar2.png">
+                        <p>@morgan</p>
+                        <p class="greyText">Super Cool Project</p>
+                    </div>
+                    <div class="trendingItem">
+                        <img class="profile" src="profiles/Avatar3.png">
+                        <p>@kendall</p>
+                        <p class="greyText">Life Changing Act</p>
+                    </div>
+                    <div class="trendingItem">
+                        <img class="profile" src="profiles/Avatar4.png">
+                        <p>@alex</p>
+                        <p class="greyText">No Traffic Maker</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
